--- a/website/app/application/core/projects/project/home/directives/home-samples.html
+++ b/website/app/application/core/projects/project/home/directives/home-samples.html
@@ -46,7 +46,7 @@
 <!--</div>-->
 
 <div class="row">
-    <div class="panel" style="border: 1px solid #d3d3d3; box-shadow: 5px 4px 5px #a1a1a1;">
+    <div class="panel card" style="border: 1px solid #d3d3d3; box-shadow: 5px 4px 5px #a1a1a1;">
     <div class="panel-heading" style="padding-top: 20px;">
         <img style="height: 35px;padding-bottom: 10px;"
              src="assets/img/splash/sample_icon.png">
