--- a/website/app/application/core/projects/project/home/directives/display-note.html
+++ b/website/app/application/core/projects/project/home/directives/display-note.html
@@ -1,15 +1,9 @@
 <div>
-        <span ng-click="note.showDetails = !note.showDetails" class="pointer">
+        <span ng-click="" class="pointer">
             {{note.title | truncate:35:'...':true}}
         </span>
         <p>
-            <button  ng-if="isActive('notes','addToReview')" class="btn btn-xs btn-mini btn-success" ng-click="addItem('review')">Add to review</button>
+            <small class="text-muted"><i class="fa fa-fw fa-user"></i> {{note.creator}} </small>
+            <small style="padding-left: 60px;" class="text-muted">{{note.mtime | toDateString}} </small>
         </p>
-        <p>
-            <small class="text-muted"><i class="fa fa-fw fa-user"></i> {{note.owner}} </small>
-            <small style="padding-left: 30px;" class="text-muted">{{note.mtime | toDateString}} </small>
-        </p>
-    <div ng-if="note.showDetails">
-        <home-note-details note="note"></home-note-details>
-    </div>
 </div>
