--- a/website/app/application/core/projects/project/home/directives/display-review.html
+++ b/website/app/application/core/projects/project/home/directives/display-review.html
@@ -1,6 +1,6 @@
 <div>
         <span class="pointer"
-              ng-click="review.showDetails = !review.showDetails">
+              ng-click="">
             {{review.title}}
         </span>
 
@@ -14,10 +14,7 @@
         <p>
             <small  class="text-muted">
                <i class="fa fa-fw fa-user"></i> {{review.messages[(review.messages.length -1)].who}}
-                <small style="padding-left: 30px;">{{(review.messages[(review.messages.length -1)].date)}}</small>
+                <small style="padding-left: 60px;">{{(review.messages[(review.messages.length -1)].date)}}</small>
             </small>
         </p>
-    <div ng-if="review.showDetails">
-        <div home-review-details review="review"></div>
-    </div>
 </div>
