commit dashboard updtes

--- a/website/app/application/core/projects/project/home/home.html
+++ b/website/app/application/core/projects/project/home/home.html
@@ -13,7 +13,7 @@
     <!--</div>-->
 <!--</div>-->
 <br>
-<div>
+<div style="">
     <div class="row" style="padding-left: 15px">
         <div ui-view></div>
     </div>
