dashboard - scrollbar fixed

--- a/website/app/application/core/projects/project/home/directives/display-review.html
+++ b/website/app/application/core/projects/project/home/directives/display-review.html
@@ -4,7 +4,7 @@
             {{review.title}}
         </span>
 
-        <span style="float: right;">
+        <span class="pull-right">
             <a ng-if="review.messages.length !== 0" class="fa-stack fa-2x">
                   <i style="color: #FDAC6B;" class="fa fa-comment fa-stack-1x"></i>
                   <i style="font-size: 10px;" class="fa fa-stack-1x fa-inverse">{{review.messages.length}}</i>
