--- a/website/app/application/core/projects/project/reviews/reviews.html
+++ b/website/app/application/core/projects/project/reviews/reviews.html
@@ -1,5 +1,4 @@
 <div><br>
-
     <div class="row">
         <div class="col-xs-3">
             <button class="btn btn-info">Create</button>
@@ -33,7 +32,8 @@
                 <ul class="list-group" style="margin-left: -10px; margin-right: -10px;">
                     <li class="list-group-item pointer"
                         ng-repeat="each_review in reviews | filter:search | event: project.date: project.nextdate as reviews"
-                        ng-class="{active: review.id === each_review.id}" ng-click="openReview(each_review)">
+                        ng-class="{active: review.id === each_review.id}"
+                        ui-sref="projects.project.reviews.edit({'review_id': each_review.id})">
                         <span class="pull-right" style="color: gray;"><i class="fa fa-fw fa-comments-o"></i>
                             {{each_review.messages.length}} </span>
                         <i ng-class="{'fa fa-circle review-open': each_review.status === 'open',
@@ -43,70 +43,7 @@
                     </li>
                 </ul>
             </div>
-            <div style="overflow-y: auto;max-height: 500px;">
-                <div ng-show="review" class="col-xs-9">
-                    <div class="row">
-                        <div class="col-xs-4 col-xs-offset-1">
-                            Requested by: {{review.author}}
-                        </div>
-                    </div>
-                    <br>
-
-                    <div class="row ">
-                        <div class="col-xs-4 col-xs-offset-1">
-                            <ul class="list-group">
-                                <li class="list-group-item">
-                                    <i class="fa fa-fw fa-user"></i><b>Assigned to:</b>
-                                </li>
-                                <li class="list-group-item">
-                                    {{review.assigned_to}}
-                                </li>
-                            </ul>
-                        </div>
-                        <div class="col-xs-1">
-
-                        </div>
-                        <div class="col-xs-4">
-                            <ul class="list-group">
-                                <li class="list-group-item">
-                                    <i class="fa fa-fw fa-paperclip"></i><b>Attachments:</b>
-                                </li>
-                                <li ng-repeat="attachment in review.attachments" class="list-group-item">
-                                    {{attachment.name}}
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-
-                    <div class="row">
-                        <div class="col-xs-8 col-xs-offset-1">
-                            <i class="fa fa-fw fa-comments-o"></i> <b>Comments</b><br><br>
-
-                            <div ng-repeat="message in review.messages" class="row">
-                                <i class="fa fa-fw fa-user"></i> {{message.who}} <span style="padding-left: 5px;">{{message.date}}</span>
-                                <br><br>
-
-                                <div ta-bind ng-model="message.message" class="row"
-                                     style="background-color: white;padding: 10px;border: 1px solid #d3d3d3;">
-
-                                </div>
-                            </div>
-                            <div ng-show="review.status === 'open'" class="row">
-                                <i class="fa fa-fw fa-user"></i> {{user}}<span style="padding-left: 5px;">{{today.toDateString()}}</span>
-                                <br><br>
-
-                                <div class="row">
-                                    <textarea placeholder="Add comment..." class="form-control"
-                                              ng-model="model.comment"></textarea>
-                                    <br>
-                                    <button ng-click="addComment()" class="btn btn-success">Comment</button>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
+            <div ui-view></div>
         </div>
     </div>
 </div>
