--- a/website/app/index.html
+++ b/website/app/index.html
@@ -224,6 +224,7 @@
 <script src="application/core/projects/project/drafts/drafts-controller.js"></script>
 <script src="application/core/projects/project/reviews/reviews-controller.js"></script>
 <script src="application/core/projects/project/reviews/create-review.js"></script>
+<script src="application/core/projects/project/reviews/review-edit-controller.js"></script>
 <script src="application/core/projects/project/notes/notes-controller.js"></script>
 <script src="application/core/projects/project/notes/create-note.js"></script>
 <script src="application/core/projects/project/sideboard/sideboard-controller.js"></script>
