review page details updated - 2

--- a/website/app/application/core/projects/project/files/files.html
+++ b/website/app/application/core/projects/project/files/files.html
@@ -24,105 +24,6 @@
                 </div>
             </div>
         </div>
-        <div class="col-xs-9" ng-if="activeFile" style="overflow-y: auto;height:550px;"><br>
-            <div class="row">
-                <div class="col-xs-4">
-                    <h4><i class="fa fa-fw fa-file fa-1x"></i>
-                        {{activeFile.name}}
-                        <a ng-href="{{downloadSrc(activeFile)}}"
-                           download="{{activeFile.name}}">
-                            <i class="fa fa-fw fa-download"></i>
-                        </a>
-                    </h4>
-                </div>
-                <div class="col-xs-1 fa fa-fw fa-close fa-1x pull-right"></div>
-            </div>
-            <div class="row" style="border-top: 1px solid #d3d3d3;">
-                <div ng-click="showContent('details')" ng-class="{'file-details': bk.content === 'details'}"
-                     class="col-xs-6"><a>Details</a>
-                </div>
-                <div ng-click="showContent('activity')" ng-class="{'file-details': bk.content === 'activity'}"
-                     class="col-xs-6"><a>Activity</a></div>
-            </div>
-            <div ng-if="bk.content === 'details'">
-                <div class="row">
-                    <div class="col-xs-6">
-                        <div ng-switch="fileType">
-                            <div ng-switch-when="image">
-                                <img class="img-responsive center-block"
-                                     ng-src="{{fileSrc(activeFile)}}">
-                            </div>
-                            <div ng-switch-when="pdf">
-                                <div class="embed-responsive embed-responsive-4by3">
-                                    <embed class="col-xs-8 embed-responsive-item"
-                                           ng-src="{{fileSrc(activeFile)}}">
-                                    </embed>
-                                </div>
-                            </div>
-                            <div ng-switch-default>
-                                <div ng-if="activeFile.size <= 10000"
-                                     hljs include="fileSrc(activeFile)">
-                                </div>
-                                <code
-                                        ng-if="activeFile.size > 10000 && activeFile.size <= 2000000"
-                                        style="white-space:pre-line" ng-include="fileSrc(activeFile)">
-                                </code>
-
-                                <div ng-if="activeFile.size > 2000000">File too big to display</div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-xs-6">
-                        <div class="row" style="padding: 10px;">
-                            <b><i class="fa fa-fw fa-lock fa-2x"></i> </b> Not shared
-                        </div>
-                        <hr/>
-                        <div class="row" style="padding: 10px;">
-                            <span ng-show="!editNote"> <b><i class="fa fa-fw fa-edit fa-2x"></i> </b>Note</span> <span class="pull-right">
-                            <a ng-click="editNote = !editNote"><i class="fa fa-fw fa-edit"></i></a></span>
-                            <div class="row" ng-if="activeFile.note">
-                                <p><b>Title</b>: {{activeFile.note.title}}  </p>
-                                <div ta-bind ng-model="activeFile.note.note"></div>
-                            </div>
-
-                        </div>
-                        <div class="row" ng-show="editNote">
-                            <create-note item-type="datafile" item="activeFile"></create-note>
-                        </div>
-                        <hr/>
-                        <div class="row" style="padding: 10px;">
-                            <div class="col-xs-3"> Media Type:</div>
-                            <div class="col-xs-3">{{activeFile.mediatype}}</div>
-                            <br>
-
-                            <div class="col-xs-3"> Owner:</div>
-                            <div class="col-xs-3">{{activeFile.owner}}</div>
-                            <br>
-
-                            <div class="col-xs-3"> Created:</div>
-                            <div class="col-xs-3">{{activeFile.birthtime | toDateString}}</div>
-                            <br>
-                        </div>
-                        <hr/>
-                        <div class="row" style="padding: 10px;">
-                            <b> <i class="fa f-fw fa-tags fa-2x"></i></b> Tags :<span class="pull-right"><i
-                                class="fa fa-fw fa-edit"></i></span>
-                            <div class="row">
-                                <tags-input on-tag-added="addTag($tag)" display-property="id" on-tag-removed="removeTag($tag)" ng-model="activeFile.tags" placeholder="Add a Tag" replace-spaces-with-dashes="false">
-                                    <!--<auto-complete source="loadMovies($query)"-->
-                                                   <!--min-length="0"-->
-                                                   <!--debounce-delay="0"-->
-                                                   <!--max-results="10"></auto-complete>                                </tags-input>-->
-                            </div>
-                        </div>
-                        <hr/>
-                    </div>
-                </div>
-            </div>
-            <div ng-if="bk.content === 'activity'">
-                Activity Log here...
-            </div>
-
-        </div>
+        <div ui-view></div>
     </div>
 </div>
