--- a/website/app/index.html
+++ b/website/app/index.html
@@ -220,6 +220,7 @@
 <script src="application/core/projects/project/provenance/custompop-over.js"></script>
 
 <script src="application/core/projects/project/files/files-controller.js"></script>
+<script src="application/core/projects/project/files/file-edit-controller.js"></script>
 <script src="application/core/projects/project/access/access-controller.js"></script>
 <script src="application/core/projects/project/drafts/drafts-controller.js"></script>
 <script src="application/core/projects/project/reviews/reviews-controller.js"></script>
