updates to reviews

--- a/website/app/index.html
+++ b/website/app/index.html
@@ -23,7 +23,7 @@
     <link href="assets/css/tree-grid.css" rel="stylesheet">
     <link href="assets/css/zenburn.css" rel="stylesheet">
     <link href="assets/css/nzAnimate.css" rel="stylesheet">
-    <link href="assets/css/thumbnail.css" rel="stylesheet">
+    <!--<link href="assets/css/thumbnail.css" rel="stylesheet">-->
     <link href="assets/css/periodic-table.css" rel="stylesheet">
     <link href="assets/css/hotkeys.min.css" rel="stylesheet">
     <link href="assets/css/angular-toastr.css" rel="stylesheet">
