--- a/website/app/application/core/projects/project/reviews/edit.html
+++ b/website/app/application/core/projects/project/reviews/edit.html
@@ -1,63 +1,82 @@
-<div style="overflow-y: auto;max-height: 500px;">
-    <div  class="col-xs-9">
-        <div class="row">
-            <div class="col-xs-4 col-xs-offset-1">
-                Requested by: {{review.author}}
+<!--<div style="overflow-y: auto;max-height: 500px;">-->
+<!--<div  class="col-xs-9">-->
+<!--<div class="row">-->
+<!--<div class="col-xs-4 col-xs-offset-1">-->
+<!--Requested by: {{review.author}}-->
+<!--</div>-->
+<!--</div>-->
+<!--<br>-->
+
+<!--<div class="row ">-->
+<!--<div class="col-xs-4 col-xs-offset-1">-->
+<!--<ul class="list-group">-->
+<!--<li class="list-group-item">-->
+<!--<i class="fa fa-fw fa-user"></i><b>Assigned to:</b>-->
+<!--</li>-->
+<!--<li class="list-group-item">-->
+<!--{{review.assigned_to}}-->
+<!--</li>-->
+<!--</ul>-->
+<!--</div>-->
+<!--<div class="col-xs-1">-->
+
+<!--</div>-->
+<!--<div class="col-xs-4">-->
+<!--<ul class="list-group">-->
+<!--<li class="list-group-item">-->
+<!--<i class="fa fa-fw fa-paperclip"></i><b>Attachments:</b>-->
+<!--</li>-->
+<!--<li ng-repeat="attachment in review.attachments" class="list-group-item">-->
+<!--{{attachment.name}}-->
+<!--</li>-->
+<!--</ul>-->
+<!--</div>-->
+<!--</div>-->
+
+<!--<div class="row">-->
+<!--<div class="col-xs-8 col-xs-offset-1">-->
+<!--<i class="fa fa-fw fa-comments-o"></i> <b>Comments</b><br><br>-->
+
+<!--<div ng-repeat="message in review.messages" class="row">-->
+<!--<i class="fa fa-fw fa-user"></i> {{message.who}} <span style="padding-left: 5px;">{{message.date}}</span>-->
+<!--<br><br>-->
+
+<!--<div ta-bind ng-model="message.message" class="row"-->
+<!--style="background-color: white;padding: 10px;border: 1px solid #d3d3d3;">-->
+
+<!--</div>-->
+<!--</div>-->
+<!--<div ng-show="review.status === 'open'" class="row">-->
+<!--<i class="fa fa-fw fa-user"></i> {{user}}<span style="padding-left: 5px;">{{today.toDateString()}}</span>-->
+<!--<br><br>-->
+
+<!--<div class="row">-->
+<!--<textarea placeholder="Add comment..." class="form-control"-->
+<!--ng-model="model.comment"></textarea>-->
+<!--<br>-->
+<!--<button ng-click="addComment()" class="btn btn-success">Comment</button>-->
+<!--</div>-->
+<!--</div>-->
+<!--</div>-->
+<!--</div>-->
+<!--</div>-->
+<!--</div>-->
+
+<div class="details-main-content">
+    <div class="row">
+        <div>
+            <div class="col-xs-5">
+                <p style="font-size: 18px; color: #FDB600; text-transform: uppercase">Requested By</p>
+                <i class="fa fa-user"></i> {{review.author}}
+            </div>
+
+            <div class="col-xs-5 col-xs-offset-1">
+                <p style="font-size: 18px; color: #FDB600; text-transform: uppercase">Assigned To</p>
+                <i class="fa fa-user"></i> {{review.assigned_to}}
             </div>
         </div>
-        <br>
+    </div>
+    <div class="row">
 
-        <div class="row ">
-            <div class="col-xs-4 col-xs-offset-1">
-                <ul class="list-group">
-                    <li class="list-group-item">
-                        <i class="fa fa-fw fa-user"></i><b>Assigned to:</b>
-                    </li>
-                    <li class="list-group-item">
-                        {{review.assigned_to}}
-                    </li>
-                </ul>
-            </div>
-            <div class="col-xs-1">
-
-            </div>
-            <div class="col-xs-4">
-                <ul class="list-group">
-                    <li class="list-group-item">
-                        <i class="fa fa-fw fa-paperclip"></i><b>Attachments:</b>
-                    </li>
-                    <li ng-repeat="attachment in review.attachments" class="list-group-item">
-                        {{attachment.name}}
-                    </li>
-                </ul>
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="col-xs-8 col-xs-offset-1">
-                <i class="fa fa-fw fa-comments-o"></i> <b>Comments</b><br><br>
-
-                <div ng-repeat="message in review.messages" class="row">
-                    <i class="fa fa-fw fa-user"></i> {{message.who}} <span style="padding-left: 5px;">{{message.date}}</span>
-                    <br><br>
-
-                    <div ta-bind ng-model="message.message" class="row"
-                         style="background-color: white;padding: 10px;border: 1px solid #d3d3d3;">
-
-                    </div>
-                </div>
-                <div ng-show="review.status === 'open'" class="row">
-                    <i class="fa fa-fw fa-user"></i> {{user}}<span style="padding-left: 5px;">{{today.toDateString()}}</span>
-                    <br><br>
-
-                    <div class="row">
-                                    <textarea placeholder="Add comment..." class="form-control"
-                                              ng-model="model.comment"></textarea>
-                        <br>
-                        <button ng-click="addComment()" class="btn btn-success">Comment</button>
-                    </div>
-                </div>
-            </div>
-        </div>
     </div>
 </div>
