--- a/website/app/index/navbar.html
+++ b/website/app/index/navbar.html
@@ -23,20 +23,21 @@
 
                 <li>
                     <a ng-click="goHome()"
-                       class="navbar-link large-text">
+                       class="pointer large-text">
                         <i class="fa fa-fw fa-home space-right"></i>
                         Home
                     </a>
                 </li>
                 <li>
-                    <a class="large-text"
+                    <a class="large-text pointer"
                        ng-click="toggleHelp()">
                         <i class="fa fa-fw fa-question space-right"></i>
                         Help
                     </a>
                 </li>
                 <li ng-class="{ navactive: isActiveStep('reviews') }">
-                    <a class="dropdown-toggle large-text" data-toggle="dropdown">
+                    <a class="dropdown-toggle pointer large-text"
+                       data-toggle="dropdown">
                         <i class="fa fa-comment space-right"></i> Reviews
                     <span ng-controller="globalReviewsController"
                           style="background-color: rgba(255, 255, 255, 0.3)" class="badge ng-binding">
@@ -58,7 +59,8 @@
                 </li>
 
                 <li class="dropdown divider">
-                    <a ng-click="showStep('email')" class="dropdown-toggle large-text" data-toggle="dropdown">
+                    <a ng-click="showStep('email')"
+                       class="dropdown-toggle pointer large-text" data-toggle="dropdown">
                         <i class="fa fa-fw fa-user space-right"></i>{{email_address}}
                         <span class="caret caret-light"></span>
                     </a>
