--- a/website/app/application/core/splash.html
+++ b/website/app/application/core/splash.html
@@ -14,12 +14,14 @@
                         <br>
 
                         <div class="row">
-                            <input ng-model="password" required="" class="form-control" placeholder="Password..."
+                            <input ng-model="password" required=""
+                                   class="form-control" placeholder="Password..."
+                                   on-enter="login()"
                                    type="password">
                         </div>
                         <br>
 
-                        <div class="row">
+                        <div ng-if="false" class="row">
                             <div class="col-xs-6">
                                 <input type="checkbox" ng-model="rememberMe"> Remember me
                             </div>
