--- a/website/app/index.html
+++ b/website/app/index.html
@@ -200,6 +200,7 @@
 <script src="application/core/projects/project/samples/samples.js"></script>
 <script src="application/core/projects/project/samples/create.js"></script>
 <script src="application/core/projects/project/samples/sample-from-template.js"></script>
+<script src="application/core/projects/project/processes/processes-controller.js"></script>
 <script src="application/core/projects/project/processes/process-network-view.js"></script>
 <script src="application/core/projects/project/processes/process-check-service.js"></script>
 <script src="application/core/projects/project/project-size-filter.js"></script>
