--- a/website/app/application/core/projects/project/project-task-bar.html
+++ b/website/app/application/core/projects/project/project-task-bar.html
@@ -1,10 +1,10 @@
 <div class="row" style="background-color: #518394; margin-bottom: 0px">
     <div class="col-xs-3">
         <ul style="padding-left: 5px;" class="taskbar nav nav-tabs">
-            <li class="dropdown">
+            <li class="dropdown projects-drop-down">
                 <a title="{{project.name}}" class="dropdown-toggle pointer" data-toggle="dropdown"
-                   style="color: white; padding-left: 5px;">
-                    <i class="white fa fa-fw fa-briefcase"></i>
+                   style="padding-left: 5px;">
+                    <i class="fa fa-fw fa-briefcase"></i>
                     {{project.name | truncate: 17: '...'}} <span class="white badge" style="float: none;">{{projects.length}}</span>
                     <span class="caret"></span>
                 </a>
