--- a/website/app/application/core/projects/project/files/files.html
+++ b/website/app/application/core/projects/project/files/files.html
@@ -1,29 +1,74 @@
-<div class="row"><br>
 
-    <div class="row">
-        <div class="col-xs-4 pull-right">
-            <div class="form-group has-feedback">
-                <input style="padding-left: 35px;" ng-model="searchInput" placeholder="Search Files..."
-                       class="form-control">
-                <span style="left: 0;padding-left: 10px;" class="fa fa-fw fa-search form-control-feedback"></span>
-            </div>
-        </div>
-    </div>
-    <div class="row" style="border: 1px solid #757575; height: 600px;">
-        <div class="col-xs-3" style="margin-left: -10px;">
-            <div class="row file-heading">
-            </div>
-            <div class="row">
-                <div class="sidebar-wrapper">
-                    <file-upload-panel></file-upload-panel>
-                    <mc-tree items="files"
-                             matches="matchingFiles"
-                             orderby="'name'"
-                             check-box="showCheckBox">
-                    </mc-tree>
+<div class="row">
+    <div class="col-xs-12 details-container">
+        <nav class="navbar navbar-default">
+            <div class="collapse navbar-collapse">
+                <ul class="nav navbar-nav">
+                    <li class="active"><a>all Files</a></li>
+                    <li><a class="">Archived</a></li>
+                </ul>
+                <div style="padding-top: 20px;" class="col-xs-4 pull-right">
+                    <div class="form-group has-feedback">
+                        <input style="padding-left: 35px;" ng-model="searchInput" placeholder="Search Files..."
+                               class="form-control">
+                        <span style="left: 0;padding-left: 10px;"
+                              class="fa fa-fw fa-search form-control-feedback"></span>
+                    </div>
                 </div>
             </div>
-        </div>
-        <div ui-view></div>
+        </nav>
+
     </div>
-</div>
+    <div class="row" style="margin-top: 20px;">
+        <div class="col-xs-4">
+            <div class="details-sidebar">
+                <div class="row">
+                    <div style="text-align: center;margin-top: 20px;">
+                        <button class="btn-review btn btn-default"> Upload</button>
+                    </div>
+                </div>
+                <file-upload-panel></file-upload-panel>
+                <mc-tree items="files"
+                         matches="matchingFiles"
+                         orderby="'name'"
+                         check-box="showCheckBox">
+                </mc-tree>
+            </div>
+
+        </div>
+        <div class="col-xs-8" stylex="margin-left: 10px;">
+            <div ui-view></div>
+        </div>
+    </div>
+    </div>
+
+
+<!--<div class="row"><br>-->
+
+    <!--<div class="row">-->
+        <!--<div class="col-xs-4 pull-right">-->
+            <!--<div class="form-group has-feedback">-->
+                <!--<input style="padding-left: 35px;" ng-model="searchInput" placeholder="Search Files..."-->
+                       <!--class="form-control">-->
+                <!--<span style="left: 0;padding-left: 10px;" class="fa fa-fw fa-search form-control-feedback"></span>-->
+            <!--</div>-->
+        <!--</div>-->
+    <!--</div>-->
+    <!--<div class="row" style="border: 1px solid #757575; height: 600px;">-->
+        <!--<div class="col-xs-3" style="margin-left: -10px;">-->
+            <!--<div class="row file-heading">-->
+            <!--</div>-->
+            <!--<div class="row">-->
+                <!--<div class="sidebar-wrapper">-->
+                    <!--<file-upload-panel></file-upload-panel>-->
+                    <!--<mc-tree items="files"-->
+                             <!--matches="matchingFiles"-->
+                             <!--orderby="'name'"-->
+                             <!--check-box="showCheckBox">-->
+                    <!--</mc-tree>-->
+                <!--</div>-->
+            <!--</div>-->
+        <!--</div>-->
+        <!--<div ui-view></div>-->
+    <!--</div>-->
+<!--</div>-->
