--- a/website/app/application/core/projects/project/project-task-bar.html
+++ b/website/app/application/core/projects/project/project-task-bar.html
@@ -26,7 +26,7 @@
                        aria-controls="profile" role="tab"
                        class="pointer"
                        data-toggle="tab">
-                        <i class="fa fa-fw fa-home bold"></i>Home
+                        <i class="fa fa-fw fa-home"></i>Home
                     </a>
                 </li>
                 <li role="presentation" ng-class="{'active': activePage === 'processes'}">
@@ -42,7 +42,7 @@
                        aria-controls="profile" role="tab"
                        class="pointer"
                        data-toggle="tab">
-                        <i class="fa fa-fw fa-files-o bold"></i> Files
+                        <i class="fa fa-fw fa-files-o"></i> Files
                     </a>
                 </li>
                 <li role="presentation" ng-class="{'active': activePage === 'samples'}">
@@ -50,7 +50,7 @@
                        aria-controls="profile" role="tab"
                        class="pointer"
                        data-toggle="tab">
-                        <i class="fa fa-fw fa-cubes bold"></i> Samples
+                        <i class="fa fa-fw fa-cubes"></i> Samples
                     </a>
                 </li>
                 <li role="presentation" ng-class="{'active': activePage === 'reviews'}">
@@ -58,7 +58,7 @@
                        aria-controls="profile" role="tab"
                        class="pointer"
                        settings data-toggle="tab">
-                        <i class="fa fa-fw fa-comment bold"></i> Reviews
+                        <i class="fa fa-fw fa-comment"></i> Reviews
                     </a>
                 </li>
                 <li role="presentation" ng-class="{'active': activePage === 'notes'}">
@@ -66,7 +66,7 @@
                        aria-controls="profile" role="tab"
                        class="pointer"
                        data-toggle="tab">
-                        <i class="fa fa-fw fa-edit bold"></i>Notes
+                        <i class="fa fa-fw fa-edit"></i>Notes
                     </a>
                 </li>
             </ul>
