new-ui updates to reviews page

--- a/website/app/application/core/projects/project/reviews/reviews.html
+++ b/website/app/application/core/projects/project/reviews/reviews.html
@@ -68,7 +68,7 @@
             <div class="details-sidebar">
                 <div class="row">
                     <div style="text-align: center;margin-top: 20px;">
-                        <button class="btn-review btn btn-default"> create</button>
+                        <button class="btn-review  btn-details-container btn btn-default"> create</button>
                     </div>
                 </div>
                 <ul class="list-group" style="">
