--- a/website/app/application/core/projects/project/reviews/edit.html
+++ b/website/app/application/core/projects/project/reviews/edit.html
@@ -63,20 +63,114 @@
 <!--</div>-->
 
 <div class="details-main-content">
-    <div class="row">
-        <div>
-            <div class="col-xs-5">
-                <p style="font-size: 18px; color: #FDB600; text-transform: uppercase">Requested By</p>
-                <i class="fa fa-user"></i> {{review.author}}
-            </div>
+    <div >
+        <div class="row">
+            <div>
+                <div class="col-xs-5">
+                    <div class="headings">Requested By</div>
+                    <span class="fa-stack fa-lg">
+                        <i  style="color: #C0C0C0" class="fa fa-circle fa-stack-2x"></i>
+                        <i  style="color: white;"class="fa fa-user fa-stack-1x"></i>
+                    </span>
+                    <span class="who"> {{review.author}} </span>
+                </div>
 
-            <div class="col-xs-5 col-xs-offset-1">
-                <p style="font-size: 18px; color: #FDB600; text-transform: uppercase">Assigned To</p>
-                <i class="fa fa-user"></i> {{review.assigned_to}}
+                <div class="col-xs-5 col-xs-offset-1">
+                    <div class="headings">Assigned To</div>
+                   <span class="fa-stack fa-lg">
+                        <i  style="color: #C0C0C0" class="fa fa-circle fa-stack-2x"></i>
+                        <i  style="color: white;"class="fa fa-user fa-stack-1x"></i>
+                    </span>
+                    <span class="who">{{review.assigned_to}}</span>
+                </div>
+            </div>
+        </div>
+        <hr class="divider"/>
+
+        <div class="row">
+            <div class="col-xs-12 headings">Attachment</div>
+
+            <div ng-repeat="attachment in review.attachments">
+                <i class="fa fa-fw fa-paperclip fa-lg" style="color: #919191"></i><a class="link pointer">{{attachment.name}}</a>
+            </div>
+        </div>
+        <hr class="divider"/>
+        <div class="row">
+            <div class="col-xs-12">
+                <div class="headings">Comments</div>
+                <div style="padding-left: 10px;">
+                    <ul class="list-group">
+                        <li class="list-group-item" style="border: none;" ng-repeat="message in review.messages">
+                           <span class="fa-stack fa-lg">
+                                <i  style="color: #C0C0C0" class="fa fa-circle fa-stack-2x"></i>
+                                <i  style="color: white;"class="fa fa-user fa-stack-1x"></i>
+                            </span>
+                            <span class="who">{{message.who}}</span>
+
+                            <div style="padding-left: 15px;padding-top: 10px;" ta-bind ng-model="message.message"
+                                 class="row"></div>
+                            <small style="padding-left: 15px;" class="text-muted">{{message.date}}</small>
+                        </li>
+                    </ul>
+                    <div class="row">
+                        <div class="col-xs-7">
+                            <textarea placeholder="Add a comment..." class="form-control"
+                                      ng-model="model.comment"></textarea>
+                        </div>
+                        <div class="col-xs-3">
+                            <button ng-click="addComment()"
+                                    class="btn btn-success btn-review btn-details-container">Comment
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-xs-12">
+                <i class="fa fa-fw fa-archive fa-lg link"></i> <a class="link pointer">CLOSE AND ARCHIVE</a>
             </div>
         </div>
     </div>
+
+
+    <div ng-if="false" class="row">
+        <div class="col-xs-6">
+            <div class="headings">Assign To</div>
+            <div class="row"><select class="form-control" ng-model="model.assigned_to" name="assign_to"
+                                     validator="required">
+                <option disabled>-- Assign to --</option>
+                <option ng-repeat="user in project.users">{{ user.user_id }}</option>
+            </select>
+            </div>
+            <br>
+
+            <div class="stack-links">
+                <i class="fa fa-user"></i>
+            </div>
+            <span class="who"> jfadams.umich.edu </span> <i style="padding-left: 30px;" class="fa fa-fw fa-close"></i>
+        </div>
+    </div>
+    <hr class="divider"/>
     <div class="row">
+        <div class="col-xs-12 headings">Attachment</div>
+
+        <div ng-repeat="attachment in review.attachments">
+            <i class="fa fa-fw fa-paperclip fa-lg" style="color: #919191"></i><a class="link pointer">{{attachment.name}}</a>
+        </div>
+    </div>
+    <hr class="divider"/>
+    <div class="row">
+        <div class="col-xs-8 headings">Message
+            <div>
+                <input placeholder="SUBJECT" class="form-control" ng-model="model.title"><br>
+                <text-angular ta-toolbar="[['h2', 'h5', 'h6', 'quote','bold','italics','underline'],
+                              ['ul','ol', 'justifyLeft', 'insertLink', 'insertImage']]"
+                              ng-model="model.comment"></text-angular>
+            </div>
+        </div>
 
     </div>
+</div>
 </div>
