--- a/website/app/application/core/splash.html
+++ b/website/app/application/core/splash.html
@@ -71,7 +71,7 @@
 
                 <p style="color: grey;padding-top: 8px;padding-left: 15px;">NOTE</p>
             </div>
-            <div class="col-xs-2" style="padding-right: 150px;"><a  ng-click="goTo('calendar01')"><img
+            <div class="col-xs-2" style="padding-right: 150px;"><a ng-click="goTo('calendar01')"><img
                     style="height: 60px;"
                     src="assets/img/splash/calendar_icon.png"></a>
 
@@ -136,7 +136,10 @@
                     <br>
 
                     <p style="padding-left: 25px; color: grey; font-size: 16px; font-family: 'Helvetica Neue', Helvetica, Ariel, sans-serif;">
-                        Create a sample and keep track of the whole process of the experiments and research on its segments and transforms.
+                        Create a sample and keep track of the whole process of the experiments and research on its
+                        segments and transforms.
+                        Also you can keep track of series of measurements for the sample by running through different
+                        processes. And choose best value measure at any point of time
                     </p>
                 </div>
             </div>
@@ -162,7 +165,11 @@
                     <br>
 
                     <p style="padding-left: 25px; color: grey; font-size: 16px; font-family: 'Helvetica Neue', Helvetica, Ariel, sans-serif;">
-                        Ask for reviews of your files and samples. Get involved in conversations over your team's research findings.</p>
+                        This feature allows user to request a review on files/ samples/ processes so that other users can
+                        take a look at your work and respond accordingly. You can assign a
+                        review to all the users who share your project.
+                        Get involved in conversations over your team's
+                        research findings.</p>
 
                 </div>
                 <div class="col-xs-1">
@@ -198,9 +205,8 @@
                     <br>
 
                     <p style="padding-left: 25px; color: grey; font-size: 16px; font-family: 'Helvetica Neue', Helvetica, Ariel, sans-serif;">
-                        Easy upload, download and preview of your files.
+                        Easy upload, download and preview of your files. Also you can create sub folders under each project which helps you to preserve the structure
                     </p>
-
                 </div>
             </div>
         </div>
@@ -224,7 +230,8 @@
                     <br>
 
                     <p style="padding-left: 25px; color: grey; font-size: 16px; font-family: 'Helvetica Neue', Helvetica, Ariel, sans-serif;">
-                        Add notes to samples or files to help memorize your updates to them. Or simply jot down lines for your reference.
+                        Add notes to samples or files or projects to help memorize your updates to them. Or simply jot down lines
+                        for your reference.
                     </p>
 
                 </div>
@@ -238,6 +245,7 @@
         </div>
     </div>
     <br><br>
+
     <div class="row note-splash" id="calendar01">
         <div class="row">
             <ul class="nav pull-right scroll-top corner">
@@ -255,7 +263,7 @@
                     <br>
 
                     <p style="padding-left: 25px; color: grey; font-size: 16px; font-family: 'Helvetica Neue', Helvetica, Ariel, sans-serif;">
-                        Helps you to keep track of events by date
+                        Helps you to keep track of events by date.
                     </p>
 
                 </div>
