--- a/website/app/application/core/projects/project/reviews/create.html
+++ b/website/app/application/core/projects/project/reviews/create.html
@@ -6,19 +6,21 @@
         <div class="col-xs-4">
             <div class="headings">Assign To</div>
             <div class="row">
-                <select ng-change="addUser()" ng-model="selectedUser" data-placeholder="Choose Assignee" class="form-control"
+                <select ng-change="addUser()" ng-model="selectedUser" data-placeholder="Choose Assignee"
+                        class="form-control"
                         validator="required">
                     <option ng-repeat="user in project.users">{{ user.user_id }}</option>
                 </select>
             </div>
             <br>
+
             <div ng-repeat="each_user in model.assigned_to">
                   <span class="fa-stack fa-lg">
                 <i style="color: #C0C0C0" class="fa fa-circle fa-stack-2x"></i>
                 <i style="color: white;" class="fa fa-user fa-stack-1x"></i>
                 </span>
                 <span class="who"> {{each_user}}</span> <i ng-click="removeUser(each_user)" style="padding-left: 30px;"
-                                                                   class="fa fa-fw fa-close"></i>
+                                                           class="fa fa-fw fa-close"></i>
             </div>
 
         </div>
@@ -54,10 +56,10 @@
         <br>
 
         <div class="col-xs-3">
-            <button class="btn btn-default text-capitalize">Cancel</button>
+            <button class="btn btn-danger">Cancel</button>
         </div>
         <div class="col-xs-3">
-            <button class="btn-review  btn-details-container btn btn-default">Send</button>
+            <button class=" btn btn-default btn-review  btn-details-container">Send</button>
         </div>
     </div>
 </div>
